@@ -49,6 +49,7 @@ typedef struct {
   LilvNode* rdfs_range;
   LilvNode* rsz_minimumSize;
   LilvNode* state_threadSafeRestore;
+  LilvNode* time_Position;
   LilvNode* ui_showInterface;
   LilvNode* work_interface;
   LilvNode* work_schedule;
