@@ -215,6 +215,9 @@ jalv_process_port_init(JalvProcessPort* const  port,
   port->supports_midi =
     lilv_port_supports_event(lilv_plugin, lilv_port, nodes->midi_MidiEvent);
 
+  port->supports_pos =
+    lilv_port_supports_event(lilv_plugin, lilv_port, nodes->time_Position);
+
   return 0;
 }
 
